<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/baseline_move_to_inbox_24"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/nav_Outbox"
            android:icon="@drawable/baseline_outgoing_mail_24"
            android:title="@string/menu_outbox" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/baseline_restore_from_trash_24"
            android:title="@string/menu_trash" />

        <item android:titleCondensed="More Optiopns"
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />

    </group>
<!--     android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/baseline_settings_24"-->
<!--            android:title="@string/menu_setting" />-->
<!--        <item-->
<!--            android:id="@+id/nav_logouty"-->
<!--            android:icon="@drawable/baseline_logout_24"-->
<!--            android:title="@string/menu_logout" />-->




</menu>